objects/vlocity_cmt__Datastore__c.object
<CustomObject>
    <description>Vlocity Data store to be used as persistent cache</description>
    <fields>
        <fullName>vlocity_cmt__Classname__c</fullName>
        <description>fully qualified className to be deserialized to.</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Key__c</fullName>
        <description>Key field to act as key to data store</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Data Store Item</relationshipLabel>
        <relationshipName>DataStoreItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Value__c</fullName>
        <description>Value for the key object</description>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Vlocity Data Store</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VlocityDataStore Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Data Stores</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__CPQAPI</fullName>
        <active>true</active>
        <description>CPQ API partition</description>
        <label>CPQAPI</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ProductHierarchy</fullName>
        <active>true</active>
        <description>Flatenned Product Hierarchy Items</description>
        <label>Product Hierarchy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>